--- a/package.json
+++ b/package.json
@@ -1,47 +1,20 @@
 {
-  "name": "prescripted",
-  "version": "0.1.0",
+  "name": "Prescripted",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/firebase": "^7.3.0",
     "core-js": "^3.6.5",
-    "firebase": "^7.19.1",
-    "firebase-tools": "^8.10.0",
-    "v-viewer": "^1.5.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "firebase": "^8.2.2",
+    "nuxt": "^2.14.6",
+    "vuesax": "^4.0.1-alpha.25"
   },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.4",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "devDependencies": {}
 }
